# grimoirelab-perceval-weblate

./: .flake8  AUTHORS  NEWS  README.md  pyproject.toml  requirements_dev.txt  setup.py
.github/workflows/: ci.yml  release.yml  tests.yml
perceval/backends/weblate/: _version.py  weblate.py
releases/: 0.2.0.md  0.2.1.md  0.2.10.md  0.2.11-rc.1.md  0.2.11.md  0.2.12-rc.1.md  0.2.12.md  0.2.13-rc.1.md  0.2.13.md  0.2.14-rc.1.md  0.2.14.md  0.2.15-rc.1.md  0.2.15.md  0.2.16-rc.1.md  0.2.16-rc.2.md  0.2.16.md  0.2.17-rc.1.md  0.2.17.md  0.2.18-rc.1.md  0.2.18.md  0.2.19-rc.1.md  0.2.19.md  0.2.2-rc.1.md  0.2.2-rc.10.md  0.2.2-rc.11.md  0.2.2-rc.12.md  0.2.2-rc.13.md  0.2.2-rc.2.md  0.2.2-rc.3.md  0.2.2-rc.4.md  0.2.2-rc.5.md  0.2.2-rc.6.md  0.2.2-rc.7.md  0.2.2-rc.8.md  0.2.2-rc.9.md  0.2.2.md  0.2.20-rc.1.md  0.2.20.md  0.2.21-rc.1.md  0.2.21.md  (+84 more)
releases/unreleased/: drop-python-37.yml
tests/: test_weblate.py
